
set(SACN_LIB_TARGET_NAME sACN)

set(SACN_CONFIG_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/config)
set(SACN_TARGETS_EXPORT_NAME ${PROJECT_NAME}Targets)

################################# sACN Library ################################

include(${SACN_CMAKE}/AddCoreLibraryTarget.cmake)

if(DEFINED SACN_CONFIG_LOC)
  sacn_add_core_library_target(${SACN_LIB_TARGET_NAME} ${SACN_CONFIG_LOC})
else()
  sacn_add_core_library_target(${SACN_LIB_TARGET_NAME})
endif()

set_target_properties(${SACN_LIB_TARGET_NAME} PROPERTIES COMPILE_PDB_NAME "${SACN_LIB_TARGET_NAME}")
set_target_properties(${SACN_LIB_TARGET_NAME} PROPERTIES COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")

# Installation
install(TARGETS ${SACN_LIB_TARGET_NAME}
  EXPORT ${SACN_TARGETS_EXPORT_NAME}
  ARCHIVE DESTINATION lib
  INCLUDES DESTINATION include
)
install(DIRECTORY ${SACN_ROOT}/include/sacn DESTINATION include FILES_MATCHING PATTERN "*.h")

if(SACN_INSTALL_PDBS)
  get_target_property(SACN_PDB_OUTPUT_DIRECTORY ${SACN_LIB_TARGET_NAME} COMPILE_PDB_OUTPUT_DIRECTORY)
  get_target_property(SACN_PDB_NAME ${SACN_LIB_TARGET_NAME} COMPILE_PDB_NAME)
  install(FILES "${SACN_PDB_OUTPUT_DIRECTORY}/Debug/${SACN_PDB_NAME}.pdb" DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES "${SACN_PDB_OUTPUT_DIRECTORY}/RelWithDebInfo/${SACN_PDB_NAME}.pdb" DESTINATION lib CONFIGURATIONS RelWithDebInfo OPTIONAL)
endif()
